Several fixes & polish
 - Fixed wrong background texture.
 - Fixed inactive tabs rendering too far left, and tab icon alignment.
 - Fixed various vertical alignment issues due to line-height.
 - Fixed re-renders briefly showing the warnings dialog and making the screen flash.
 - Centred attunement input.
 - Fixed missing min width and height.
 - Fixed dark mode header texture rendering above header input elements in edit mode.
 - Adjusted spacing between sheet header and body.
 - Removed excess padding around sheet body.
 - Fixed missing active tab underline on items & activity sheets.
 - Fixed rendering of encumbrance bar & child creation button.
 - Fixed missing item-list-controls filters.

--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -71,7 +71,7 @@
 
     nav.tabs {
       --tab-full-width: 44px;
-      --tab-inactive-width: 34px;
+      --tab-inactive-width: 38px;
       position: absolute;
       display: flex;
       flex-direction: column;
@@ -94,7 +94,10 @@
 
         &:not([hidden]) { display: flex; }
 
-        i { font-size: var(--font-size-14); }
+        i {
+          font-size: var(--font-size-14);
+          margin: 0;
+        }
 
         &.active, &:hover {
           text-shadow: none;
@@ -959,6 +962,7 @@
     var(--dnd5e-color-parchment);
   border: var(--dnd5e-border-gold);
   color: var(--color-text-dark-primary);
+  line-height: normal;
 
   &:not(.minimized) .window-header {
     position: relative;
@@ -1027,6 +1031,7 @@
     }
 
     dnd5e-icon.window-icon { display: block; }
+    slide-toggle { transform: scale(.9); }
   }
 
   .window-content {
@@ -1100,7 +1105,7 @@
       &.active {
         color: var(--color-text-dark-primary);
         text-shadow: none;
-        label { border-bottom: 3px solid var(--dnd5e-color-gold); }
+        label, span { border-bottom: 3px solid var(--dnd5e-color-gold); }
       }
     }
 
