--- a/less/v2/sheets.less
+++ b/less/v2/sheets.less
@@ -120,8 +120,9 @@
     inset: auto 16px 16px auto;
   }
   &.standard-form .create-child {
-    height: 30px;
-    line-height: normal;
+    height: 28px;
+    width: 28px;
+    line-height: 24px;
   }
 
   form:is(.tab-inventory, .tab-features, .tab-spells, .tab-effects, .tab-advancement, .tab-activities) .create-child,
